[metadata]
name = pyutils
version = 0.1.0
author = Emre Isikligil
author_email = emreisikligil@gmail.com
license = MIT
description = Yet another utility package 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emreisikligil/pyutils
project_urls =
    Bug Tracker = https://github.com/emreisikligil/pyutils/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.7
packages =
    pyutils
    pyutils.auth
    pyutils.http
    pyutils.sql
install_requires =
    Flask >=1.1.2, <1.2
    SQLAlchemy >=1.3.23, <1.4
    fastjsonschema >=2.15.0, <2.16
    PyYAML >=5.4.1, <5.5
    Werkzeug >=1.0.1, <1.1
    PyJWT >=2.0.1, <2.1
    cryptography >=3.4.6, <3.5
